# RAG

documentation-helper/: ingestion.py  pyproject.toml
documentation-helper/backend/: core.py
langchain-course-project-rag-gist/: ingestion.py  main.py  pyproject.toml
